--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-
-    "lucide-react": "^0.545.0",
-
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
