--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,5 +9,12 @@
     "SKYNET": "Data Source=DESKTOP-9E807K6;Initial Catalog=Skynet_commerce;Integrated Security=True;Trust Server Certificate=True"
     //"SKYNET": "Data Source=localhost,1434;Initial Catalog=SkynetEcommerce;User ID=skynet; Password=@Abcd@1234; Trust Server Certificate=True"
   },
+  "Jwt": {
+    "Key": "this_is_your_super_secret_key_123456789",
+    "Issuer": "SkynetBackend",
+    "Audience": "SkynetFrontend",
+    "ExpireHours": "2"
+  },
+
   "AllowedHosts": "*"
 }
