--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SKYNET": "Server=.;Database=Skynet_commerce;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SKYNET": "Server=.;Database=Skynet_commerce;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
   },
   "AllowedHosts": "*"
 }
