--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,11 +8,18 @@
   "ConnectionStrings": {
     "SKYNET": "Server=localhost,1434;Database=Skynet_commerce;User Id=sa;Password=MatKhauSuperSecure123!;TrustServerCertificate=True;"
   },
+  
   "Jwt": {
     "Key": "this_is_your_super_secret_key_123456789",
     "Issuer": "SkynetBackend",
     "Audience": "SkynetFrontend",
     "ExpireHours": "2"
+  },
+  
+  "CloudinarySettings": {
+    "CloudName": "dup8we2pu",
+    "ApiKey": "867978258247598",
+    "ApiSecret": "TKMLaEwd5pUvbzyTMXgXC3Ui8W8"
   },
 
   "AllowedHosts": "*"
