upload img to cloud

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "CloudinarySettings": {
+    "CloudName": "dup8we2pu",
+    "ApiKey": "867979259247598",
+    "ApiSecret": "TKMLaEwd5pUvbzyTMXgXC3Ui8W8"
   }
 }
