--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.8" />
+
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
 	  
