thêm backend vnpay

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,19 +8,31 @@
   "ConnectionStrings": {
     "SKYNET": "Server=localhost,1434;Database=Skynet_commerce;User Id=sa;Password=MatKhauSuperSecure123!;TrustServerCertificate=True;"
   },
-  
+
   "Jwt": {
     "Key": "this_is_your_super_secret_key_123456789",
     "Issuer": "SkynetBackend",
     "Audience": "SkynetFrontend",
     "ExpireHours": "2"
   },
-  
+
   "CloudinarySettings": {
     "CloudName": "dup8we2pu",
     "ApiKey": "867978258247598",
     "ApiSecret": "TKMLaEwd5pUvbzyTMXgXC3Ui8W8"
   },
+
+  "Vnpay": {
+    "TmnCode": "I71D6XRX",
+    "HashSecret": "TMOB4V9LGQPQNK6QILK0D6V7ETW3O4RG",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "https://localhost:7132/api/payment/payment-callback"
+  },
+  "TimeZoneId": "SE Asia Standard Time", // Asia/Bangkok
 
   "AllowedHosts": "*"
 }
